--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,18 +3,26 @@
     <div class="col-xs-12">
       <h2>Mes appareils</h2>
       <p>Mis à jour : {{ lastUpdate | async | date: 'yMMMMEEEEd' | uppercase }}</p>
-      <!-- <h2>{{ update | date:"short" }}</h2> -->
+
       <ul class="list-group">
+
         <app-appareil
-        *ngFor="let appareil of appareils"
+        *ngFor="let appareil of appareils; let i = index"
+        [indexOfAppareil]="i"
         [appareilName] ="appareil.name"
-        [appareilStatus] ="appareil.status"></app-appareil>
+        [appareilStatus] ="appareil.status"
+        ></app-appareil>
+
       </ul>
-      <button
-      type="button"
-      class="btn btn-success"
-      [disabled]="!isAuth"
-      (click)="onAllumer()">Tout allumer</button>
-    </div>
+
+      <button class="btn btn-success"
+              [disabled]="!isAuth"
+              (click)="onAllumer()">Tout allumer</button>
+
+      <button class="btn btn-danger"
+              [disabled]="!isAuth"
+              (click)="onEteindre()">Tout éteindre</button>
+
   </div>
+
 </div>
