--- a/src/app/appareil/appareil.component.html
+++ b/src/app/appareil/appareil.component.html
@@ -1,8 +1,26 @@
 <li [ngClass]="{'list-group-item': true,
-                'list-group-item-success': appareilStatus === 'Allumé',
-                'list-group-item-danger': appareilStatus === 'Eteint'}">
+                'list-group-item-success': appareilStatus === 'allumé',
+                'list-group-item-danger': appareilStatus === 'éteint'}">
   <div style="width:20px;height:20px;background-color:red;"
-       *ngIf="appareilStatus === 'Eteint'"></div>
+       *ngIf="appareilStatus === 'éteint'"></div>
+
+  <div style="width:20px;height:20px;background-color:green;"
+       *ngIf="appareilStatus === 'allumé'"></div>
+
   <h4 [ngStyle]="{color: getColor()}">Appareil : {{ appareilName }} -- Statut : {{ getStatus() }}</h4>
   <input type="text" class="form-control" [(ngModel)]="appareilName">
+
+  <button type="button"
+  name="button"
+  class="btn btn-sm btn-success"
+  *ngIf = "appareilStatus === 'éteint'"
+  (click)= "onSwitchOn()"
+  [disabled] = "appareilStatus ==='allumé'">Allumé</button>
+
+  <button type="button"
+  name="button"
+  class="btn btn-sm btn-success"
+  *ngIf = "appareilStatus === 'allumé'"
+  (click)= "onSwitchOff()"
+  [disabled] = "appareilStatus ==='éteint'">Eteindre</button>
 </li>
